Fix scaling formula to show decimals New example Cosmos (arduino+LCD)

--- a/.gitattributes
+++ b/.gitattributes
@@ -64,9 +64,11 @@
 3rdparty/indi-duino/CMakeLists.txt -text
 3rdparty/indi-duino/README -text
 3rdparty/indi-duino/devices/CMakeLists.txt -text
+3rdparty/indi-duino/devices/Firmwares/Cosmos/Cosmos.ino -text
 3rdparty/indi-duino/devices/Firmwares/INDIDUINOStepper/INDIDUINOStepper.ino -text
 3rdparty/indi-duino/devices/Firmwares/StandardFirmata.ino -text
 3rdparty/indi-duino/devices/Firmwares/TemplateINDIDUINO/TemplateINDIDUINO.ino -text
+3rdparty/indi-duino/devices/cosmos_sk.xml -text
 3rdparty/indi-duino/devices/digital_inputs_sk.xml -text
 3rdparty/indi-duino/devices/focuser_sk.xml -text
 3rdparty/indi-duino/devices/indi_duino.xml -text
