Adding INDI EQMod driver by Jean-Luc Levaire

--- a/.gitattributes
+++ b/.gitattributes
@@ -90,6 +90,30 @@
 3rdparty/indi-duino/libfirmata/src/arduino.h -text
 3rdparty/indi-duino/libfirmata/src/firmata.cpp -text
 3rdparty/indi-duino/libfirmata/src/firmata.h -text
+3rdparty/indi-eqmod/AUTHORS -text
+3rdparty/indi-eqmod/CMakeLists.txt -text
+3rdparty/indi-eqmod/COPYING -text
+3rdparty/indi-eqmod/INSTALL -text
+3rdparty/indi-eqmod/README -text
+3rdparty/indi-eqmod/align/AlignData.xml -text
+3rdparty/indi-eqmod/align/align.cpp -text
+3rdparty/indi-eqmod/align/align.h -text
+3rdparty/indi-eqmod/align/htm.c -text
+3rdparty/indi-eqmod/align/htm.h -text
+3rdparty/indi-eqmod/align/indi_align_sk.xml -text
+3rdparty/indi-eqmod/align/pointset.cpp -text
+3rdparty/indi-eqmod/align/pointset.h -text
+3rdparty/indi-eqmod/cmake_modules/FindINDI.cmake -text
+3rdparty/indi-eqmod/cmake_modules/FindNova.cmake -text
+3rdparty/indi-eqmod/config.h.cmake -text
+3rdparty/indi-eqmod/eqmod.cpp -text
+3rdparty/indi-eqmod/eqmod.h -text
+3rdparty/indi-eqmod/eqmoderror.cpp -text
+3rdparty/indi-eqmod/eqmoderror.h -text
+3rdparty/indi-eqmod/indi_eqmod.xml -text
+3rdparty/indi-eqmod/indi_eqmod_sk.xml -text
+3rdparty/indi-eqmod/skywatcher.cpp -text
+3rdparty/indi-eqmod/skywatcher.h -text
 3rdparty/indi-fishcamp/AUTHORS -text
 3rdparty/indi-fishcamp/CMakeLists.txt -text
 3rdparty/indi-fishcamp/ChangeLog -text
