induino METEOSTATION html interface. Preliminary version

--- a/.gitattributes
+++ b/.gitattributes
@@ -63,12 +63,47 @@
 3rdparty/indi-apogee/indialta.c -text
 3rdparty/indi-duino/CMakeLists.txt -text
 3rdparty/indi-duino/README -text
+3rdparty/indi-duino/add-on/meteostationWEB/README -text
+3rdparty/indi-duino/add-on/meteostationWEB/html/css/style.css -text
+3rdparty/indi-duino/add-on/meteostationWEB/html/diagnostic_graphs.html -text
+3rdparty/indi-duino/add-on/meteostationWEB/html/external.html -text
+3rdparty/indi-duino/add-on/meteostationWEB/html/graphs.html -text
+3rdparty/indi-duino/add-on/meteostationWEB/html/index.html -text
+3rdparty/indi-duino/add-on/meteostationWEB/html/js/jquery.min.js -text
+3rdparty/indi-duino/add-on/meteostationWEB/html/js/steelseries-min.js -text
+3rdparty/indi-duino/add-on/meteostationWEB/html/js/tween-min.js -text
+3rdparty/indi-duino/add-on/meteostationWEB/html/justGage/auto-adjust.htm -text
+3rdparty/indi-duino/add-on/meteostationWEB/html/justGage/custom-interval.htm -text
+3rdparty/indi-duino/add-on/meteostationWEB/html/justGage/customize-style.htm -text
+3rdparty/indi-duino/add-on/meteostationWEB/html/justGage/resources/js/justgage.1.0.1.js -text
+3rdparty/indi-duino/add-on/meteostationWEB/html/justGage/resources/js/justgage.1.0.1.min.js -text
+3rdparty/indi-duino/add-on/meteostationWEB/html/justGage/resources/js/raphael.2.1.0.min.js -text
+3rdparty/indi-duino/add-on/meteostationWEB/html/justGage/show-color-by-sector.htm -text
+3rdparty/indi-duino/add-on/meteostationWEB/html/meteoGauges.html -text
+3rdparty/indi-duino/add-on/meteostationWEB/html/steelGauge.html -text
+3rdparty/indi-duino/add-on/meteostationWEB/html/steelGaugeDemo.html -text
+3rdparty/indi-duino/add-on/meteostationWEB/indiclient.py -text
+3rdparty/indi-duino/add-on/meteostationWEB/meteoRRD_MaxMinAvg.py -text
+3rdparty/indi-duino/add-on/meteostationWEB/meteoRRD_createRRD.py -text
+3rdparty/indi-duino/add-on/meteostationWEB/meteoRRD_graph.py -text
+3rdparty/indi-duino/add-on/meteostationWEB/meteoRRD_updater.py -text
+3rdparty/indi-duino/add-on/meteostationWEB/meteoconfig.py -text
+3rdparty/indi-duino/add-on/meteostationWEB/sounding.py -text
+3rdparty/indi-duino/add-on/meteostationWEB/startMETEO.sh -text
+3rdparty/indi-duino/add-on/meteostationWEB/stopMETEO.sh -text
 3rdparty/indi-duino/devices/CMakeLists.txt -text
 3rdparty/indi-duino/devices/Firmwares/Cosmos/Cosmos.ino -text
 3rdparty/indi-duino/devices/Firmwares/INDIDUINOStepper/INDIDUINOStepper.ino -text
 3rdparty/indi-duino/devices/Firmwares/StandardFirmata.ino -text
 3rdparty/indi-duino/devices/Firmwares/TemplateINDIDUINO/TemplateINDIDUINO.ino -text
+3rdparty/indi-duino/devices/Firmwares/indiduinoMETEO/Adafruit_BMP085.cpp -text
+3rdparty/indi-duino/devices/Firmwares/indiduinoMETEO/Adafruit_BMP085.h -text
+3rdparty/indi-duino/devices/Firmwares/indiduinoMETEO/dht.cpp -text
+3rdparty/indi-duino/devices/Firmwares/indiduinoMETEO/dht.h -text
+3rdparty/indi-duino/devices/Firmwares/indiduinoMETEO/i2cmaster.h -text
 3rdparty/indi-duino/devices/Firmwares/indiduinoMETEO/indiduinoMETEO.ino -text
+3rdparty/indi-duino/devices/Firmwares/indiduinoMETEO/twimaster.cpp -text
+3rdparty/indi-duino/devices/Firmwares/indiduinoMETEO/twimaster.cpp~ -text
 3rdparty/indi-duino/devices/cosmos_sk.xml -text
 3rdparty/indi-duino/devices/digital_inputs_sk.xml -text
 3rdparty/indi-duino/devices/focuser_sk.xml -text
