Update to fix dkms package

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,9 +1,13 @@
 * text=auto !eol
 3rdparty/fliusb/Makefile -text
 3rdparty/fliusb/README -text
-3rdparty/fliusb/fliusb.c -text
-3rdparty/fliusb/fliusb.h -text
-3rdparty/fliusb/fliusb_ioctl.h -text
+3rdparty/fliusb/common.postinst -text
+3rdparty/fliusb/fliusb-1.2/Makefile -text
+3rdparty/fliusb/fliusb-1.2/README -text
+3rdparty/fliusb/fliusb-1.2/dkms.conf -text
+3rdparty/fliusb/fliusb-1.2/fliusb.c -text
+3rdparty/fliusb/fliusb-1.2/fliusb.h -text
+3rdparty/fliusb/fliusb-1.2/fliusb_ioctl.h -text
 3rdparty/generic-ccd/AUTHORS -text
 3rdparty/generic-ccd/CMakeLists.txt -text
 3rdparty/generic-ccd/INSTALL -text
