--- a/.gitattributes
+++ b/.gitattributes
@@ -268,6 +268,7 @@
 3rdparty/indi-sx/AUTHORS -text
 3rdparty/indi-sx/CMakeLists.txt -text
 3rdparty/indi-sx/COPYING.LIB -text
+3rdparty/indi-sx/COPYRIGHT.txt -text
 3rdparty/indi-sx/INSTALL -text
 3rdparty/indi-sx/README -text
 3rdparty/indi-sx/hid_libusb.c -text svneol=unset#text/plain
