Syncing with upstream. Also fixing a few issues with the code and some reorganization

--- a/.gitattributes
+++ b/.gitattributes
@@ -146,11 +146,18 @@
 3rdparty/indi-eqmod/align/AlignData.xml -text
 3rdparty/indi-eqmod/align/align.cpp -text
 3rdparty/indi-eqmod/align/align.h -text
+3rdparty/indi-eqmod/align/chull.h -text
+3rdparty/indi-eqmod/align/chull/chull.c -text
+3rdparty/indi-eqmod/align/chull/macros.h -text
 3rdparty/indi-eqmod/align/htm.c -text
 3rdparty/indi-eqmod/align/htm.h -text
 3rdparty/indi-eqmod/align/indi_align_sk.xml -text
 3rdparty/indi-eqmod/align/pointset.cpp -text
 3rdparty/indi-eqmod/align/pointset.h -text
+3rdparty/indi-eqmod/align/triangulate.cpp -text
+3rdparty/indi-eqmod/align/triangulate.h -text
+3rdparty/indi-eqmod/align/triangulate_chull.cpp -text
+3rdparty/indi-eqmod/align/triangulate_chull.h -text
 3rdparty/indi-eqmod/cmake_modules/FindINDI.cmake -text
 3rdparty/indi-eqmod/cmake_modules/FindNova.cmake -text
 3rdparty/indi-eqmod/config.h.cmake -text
