Adding debian conf file for astrometry-data

--- a/.gitattributes
+++ b/.gitattributes
@@ -320,6 +320,27 @@ cmake_modules/FindVorbis.cmake -text
 cmake_modules/MacroBoolTo01.cmake -text
 cmake_modules/MacroLogFeature.cmake -text
 cmake_modules/MacroOptionalFindPackage.cmake -text
+debian/astrometry-data/astrometry-data-4200-1.install -text
+debian/astrometry-data/astrometry-data-4200-2.install -text
+debian/astrometry-data/astrometry-data-4200-3.install -text
+debian/astrometry-data/astrometry-data-4200-4.install -text
+debian/astrometry-data/astrometry-data-4201-1.install -text
+debian/astrometry-data/astrometry-data-4201-2.install -text
+debian/astrometry-data/astrometry-data-4201-3.install -text
+debian/astrometry-data/astrometry-data-4201-4.install -text
+debian/astrometry-data/astrometry-data-4202.install -text
+debian/astrometry-data/astrometry-data-4203.install -text
+debian/astrometry-data/astrometry-data-4204.install -text
+debian/astrometry-data/astrometry-data-4205.install -text
+debian/astrometry-data/astrometry-data-4206.install -text
+debian/astrometry-data/astrometry-data-4207.install -text
+debian/astrometry-data/astrometry-data-4208-4219.install -text
+debian/astrometry-data/changelog -text
+debian/astrometry-data/compat -text
+debian/astrometry-data/control -text
+debian/astrometry-data/copyright -text
+debian/astrometry-data/rules -text
+debian/astrometry-data/source/format -text
 debian/astrometry.net/changelog -text
 debian/astrometry.net/compat -text
 debian/astrometry.net/control -text
