--- a/.gitattributes
+++ b/.gitattributes
@@ -401,6 +401,21 @@ debian/indi-sx/compat -text
 debian/indi-sx/control -text
 debian/indi-sx/copyright -text
 debian/indi-sx/rules -text
+debian/kstars/changelog -text
+debian/kstars/compat -text
+debian/kstars/control -text
+debian/kstars/copyright -text
+debian/kstars/kstars-data.install -text
+debian/kstars/kstars.install -text
+debian/kstars/kstars.manpages -text
+debian/kstars/man/kdeopt.part -text
+debian/kstars/man/kstars.man -text
+debian/kstars/not-installed -text
+debian/kstars/patches/kubuntu_01_pthread_link.diff -text
+debian/kstars/patches/series -text
+debian/kstars/rules -text
+debian/kstars/source/format -text
+debian/kstars/watch -text
 debian/libapogee/changelog -text
 debian/libapogee/compat -text
 debian/libapogee/control -text
