--- a/.gitattributes
+++ b/.gitattributes
@@ -1,13 +1,12 @@
 * text=auto !eol
 /.svnignore -text
 3rdparty/fliusb/Makefile -text
+3rdparty/fliusb/Makefile.dkms -text
 3rdparty/fliusb/common.postinst -text
-3rdparty/fliusb/fliusb-1.3/Makefile -text
-3rdparty/fliusb/fliusb-1.3/README -text
-3rdparty/fliusb/fliusb-1.3/dkms.conf -text
-3rdparty/fliusb/fliusb-1.3/fliusb.c -text
-3rdparty/fliusb/fliusb-1.3/fliusb.h -text
-3rdparty/fliusb/fliusb-1.3/fliusb_ioctl.h -text
+3rdparty/fliusb/dkms/dkms.conf -text
+3rdparty/fliusb/fliusb.c -text
+3rdparty/fliusb/fliusb.h -text
+3rdparty/fliusb/fliusb_ioctl.h -text
 3rdparty/generic-ccd/AUTHORS -text
 3rdparty/generic-ccd/CMakeLists.txt -text
 3rdparty/generic-ccd/INSTALL -text
