--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,6 @@
 * text=auto !eol
 /.svnignore -text
+3rdparty/CMakeLists.txt -text
 3rdparty/fliusb/Makefile -text
 3rdparty/fliusb/Makefile.dkms -text
 3rdparty/fliusb/dkms/dkms.conf -text
