using a different debian dkms source

--- a/.gitattributes
+++ b/.gitattributes
@@ -645,15 +645,15 @@ debian/astrometry.net/control -text
 debian/astrometry.net/copyright -text
 debian/astrometry.net/rules -text
 debian/astrometry.net/source/format -text
-debian/fliusb/README.Debian -text
 debian/fliusb/changelog -text
 debian/fliusb/compat -text
 debian/fliusb/control -text
+debian/fliusb/control.modules.in -text
 debian/fliusb/copyright -text
-debian/fliusb/dirs -text
-debian/fliusb/postinst -text
-debian/fliusb/prerm -text
+debian/fliusb/dkms -text
 debian/fliusb/rules -text
+debian/fliusb/rules.modules -text
+debian/fliusb/source/format -text
 debian/indi-apogee/changelog -text
 debian/indi-apogee/compat -text
 debian/indi-apogee/control -text
