New QHY CCD driver

--- a/.gitattributes
+++ b/.gitattributes
@@ -219,22 +219,45 @@
 3rdparty/indi-meadedsi/INSTALL -text
 3rdparty/indi-meadedsi/README -text
 3rdparty/indi-meadedsi/indi_meadedsi_ccd.xml -text
+3rdparty/indi-qhy/85-qhyccd.rules -text
 3rdparty/indi-qhy/AUTHORS -text
 3rdparty/indi-qhy/CMakeLists.txt -text
 3rdparty/indi-qhy/COPYING.LIB -text
+3rdparty/indi-qhy/COPYRIGHT.txt -text
 3rdparty/indi-qhy/INSTALL -text
 3rdparty/indi-qhy/README -text
-3rdparty/indi-qhy/firmware/85-qhy.rules -text
 3rdparty/indi-qhy/firmware/LICENSE -text
-3rdparty/indi-qhy/firmware/README -text
-3rdparty/indi-qhy/firmware/qhy5.hex -text
-3rdparty/indi-qhy/firmware/qhy5loader.hex -text
+3rdparty/indi-qhy/firmware/QHY10.HEX -text
+3rdparty/indi-qhy/firmware/QHY11.HEX -text
+3rdparty/indi-qhy/firmware/QHY12.HEX -text
+3rdparty/indi-qhy/firmware/QHY15.HEX -text
+3rdparty/indi-qhy/firmware/QHY16.HEX -text
+3rdparty/indi-qhy/firmware/QHY2.HEX -text
+3rdparty/indi-qhy/firmware/QHY20.HEX -text
+3rdparty/indi-qhy/firmware/QHY21.HEX -text
+3rdparty/indi-qhy/firmware/QHY22.HEX -text
+3rdparty/indi-qhy/firmware/QHY2PRO.HEX -text
+3rdparty/indi-qhy/firmware/QHY5.HEX -text
+3rdparty/indi-qhy/firmware/QHY5II.HEX -text
+3rdparty/indi-qhy/firmware/QHY5LOADER.HEX -text
+3rdparty/indi-qhy/firmware/QHY6.HEX -text
+3rdparty/indi-qhy/firmware/QHY6PRO.HEX -text
+3rdparty/indi-qhy/firmware/QHY7.HEX -text
+3rdparty/indi-qhy/firmware/QHY8.HEX -text
+3rdparty/indi-qhy/firmware/QHY8L.HEX -text
+3rdparty/indi-qhy/firmware/QHY8M.HEX -text
+3rdparty/indi-qhy/firmware/QHY8PRO.HEX -text
+3rdparty/indi-qhy/firmware/QHY9.HEX -text
+3rdparty/indi-qhy/firmware/QHY9L.HEX -text
 3rdparty/indi-qhy/indi_qhy.xml -text
-3rdparty/indi-qhy/m42_test.fits -text
-3rdparty/indi-qhy/qhy5_driver.cpp -text
-3rdparty/indi-qhy/qhy5_driver.h -text
-3rdparty/indi-qhy/qhy_ccd.cpp -text
-3rdparty/indi-qhy/qhy_ccd.h -text
+3rdparty/indi-qhy/qhyccd.cpp -text
+3rdparty/indi-qhy/qhyccd.h -text
+3rdparty/indi-qhy/qhyconfig.h.in -text
+3rdparty/indi-qhy/qhygeneric.cpp -text
+3rdparty/indi-qhy/qhygeneric.h -text
+3rdparty/indi-qhy/qhyspecific.cpp -text
+3rdparty/indi-qhy/qhyspecific.h -text
+3rdparty/indi-qhy/qhytest.cpp -text
 3rdparty/indi-qsi/99-qsi.rules -text
 3rdparty/indi-qsi/AUTHORS -text
 3rdparty/indi-qsi/INSTALL -text
