--- a/.gitattributes
+++ b/.gitattributes
@@ -836,6 +836,8 @@ libindi/drivers/filter_wheel/trutech_wheel.c -text
 libindi/drivers/focuser/focus_simulator.cpp -text
 libindi/drivers/focuser/focus_simulator.h -text
 libindi/drivers/focuser/indi_tcfs_sk.xml -text
+libindi/drivers/focuser/moonlite.cpp -text
+libindi/drivers/focuser/moonlite.h -text
 libindi/drivers/focuser/robofocus.cpp -text
 libindi/drivers/focuser/robofocus.h -text
 libindi/drivers/focuser/tcfs.cpp -text
