adding source directory

--- a/.gitattributes
+++ b/.gitattributes
@@ -682,6 +682,7 @@ debian/indi-apogee/compat -text
 debian/indi-apogee/control -text
 debian/indi-apogee/copyright -text
 debian/indi-apogee/rules -text
+debian/indi-apogee/source/format -text
 debian/indi-eqmod/changelog -text
 debian/indi-eqmod/compat -text
 debian/indi-eqmod/control -text
@@ -693,6 +694,7 @@ debian/indi-fli/compat -text
 debian/indi-fli/control -text
 debian/indi-fli/copyright -text
 debian/indi-fli/rules -text
+debian/indi-fli/source/format -text
 debian/indi-gphoto/changelog -text
 debian/indi-gphoto/compat -text
 debian/indi-gphoto/control -text
@@ -706,22 +708,26 @@ debian/indi-qhy/indi-qhy.install -text
 debian/indi-qhy/qhy-firmware.copyright -text
 debian/indi-qhy/qhy-firmware.install -text
 debian/indi-qhy/rules -text
+debian/indi-qhy/source/format -text
 debian/indi-qsi/changelog -text
 debian/indi-qsi/compat -text
 debian/indi-qsi/control -text
 debian/indi-qsi/copyright -text
 debian/indi-qsi/rules -text
+debian/indi-qsi/source/format -text
 debian/indi-qsi/watch -text
 debian/indi-sbig/changelog -text
 debian/indi-sbig/compat -text
 debian/indi-sbig/control -text
 debian/indi-sbig/copyright -text
 debian/indi-sbig/rules -text
+debian/indi-sbig/source/format -text
 debian/indi-sx/changelog -text
 debian/indi-sx/compat -text
 debian/indi-sx/control -text
 debian/indi-sx/copyright -text
 debian/indi-sx/rules -text
+debian/indi-sx/source/format -text
 debian/kstars/changelog -text
 debian/kstars/compat -text
 debian/kstars/control -text
