adding fishcamp debian files

--- a/.gitattributes
+++ b/.gitattributes
@@ -694,6 +694,13 @@ debian/indi-eqmod/control -text
 debian/indi-eqmod/copyright -text
 debian/indi-eqmod/rules -text
 debian/indi-eqmod/watch -text
+debian/indi-fishcamp/changelog -text
+debian/indi-fishcamp/compat -text
+debian/indi-fishcamp/control -text
+debian/indi-fishcamp/copyright -text
+debian/indi-fishcamp/rules -text
+debian/indi-fishcamp/source/format -text
+debian/indi-fishcamp/watch -text
 debian/indi-fli/changelog -text
 debian/indi-fli/compat -text
 debian/indi-fli/control -text
@@ -759,6 +766,14 @@ debian/libapogee/libapogee2.dirs -text
 debian/libapogee/libapogee2.install -text
 debian/libapogee/libapogee2.links -text
 debian/libapogee/rules -text
+debian/libfishcamp/changelog -text
+debian/libfishcamp/compat -text
+debian/libfishcamp/control -text
+debian/libfishcamp/copyright -text
+debian/libfishcamp/libfishcamp-dev.install -text
+debian/libfishcamp/libfishcamp.install -text
+debian/libfishcamp/rules -text
+debian/libfishcamp/watch -text
 debian/libfli/changelog -text
 debian/libfli/compat -text
 debian/libfli/control -text
