--- a/.gitattributes
+++ b/.gitattributes
@@ -635,6 +635,7 @@ cmake_modules/FindFLI.cmake -text
 cmake_modules/FindFTDI.cmake -text
 cmake_modules/FindGPHOTO2.cmake -text
 cmake_modules/FindINDI.cmake -text
+cmake_modules/FindJPEG.cmake -text
 cmake_modules/FindMEADE.cmake -text
 cmake_modules/FindMODBUS.cmake -text
 cmake_modules/FindNova.cmake -text
