--- a/.gitattributes
+++ b/.gitattributes
@@ -848,6 +848,7 @@ libindi/config.h.cmake -text
 libindi/drivers.xml -text
 libindi/drivers/agent/agent_imager.cpp -text
 libindi/drivers/agent/agent_imager.h -text
+libindi/drivers/agent/agent_imager.txt -text
 libindi/drivers/auxiliary/99-gpusb.rules -text
 libindi/drivers/auxiliary/gpdriver.cpp -text
 libindi/drivers/auxiliary/gpdriver.h -text
