Add armhf sbig library

--- a/.gitattributes
+++ b/.gitattributes
@@ -622,6 +622,7 @@
 3rdparty/sbig/CMakeLists.txt -text
 3rdparty/sbig/libsbigudrv32.bin -text
 3rdparty/sbig/libsbigudrv64.bin -text
+3rdparty/sbig/libsbigudrv_armhf.bin -text
 3rdparty/sbig/sbigfcam.hex -text
 3rdparty/sbig/sbiglcam.hex -text
 3rdparty/sbig/sbigpcam.hex -text
