--- a/.gitattributes
+++ b/.gitattributes
@@ -83,6 +83,13 @@
 3rdparty/indi-apogee/apogee_ccd.cpp -text
 3rdparty/indi-apogee/apogee_ccd.h -text
 3rdparty/indi-apogee/indi_apogee.xml -text
+3rdparty/indi-asicam/CMakeLists.txt -text
+3rdparty/indi-asicam/COPYING.LGPL -text
+3rdparty/indi-asicam/README.md -text
+3rdparty/indi-asicam/SDK/ASICamera.h -text
+3rdparty/indi-asicam/indi_asicam.cpp -text
+3rdparty/indi-asicam/indi_asicam.h -text
+3rdparty/indi-asicam/indi_asicam.xml -text
 3rdparty/indi-duino/CMakeLists.txt -text
 3rdparty/indi-duino/README -text
 3rdparty/indi-duino/add-on/meteostationWEB/README -text
