Initial import of Ujari Driver

--- a/.gitattributes
+++ b/.gitattributes
@@ -28,3 +28,23 @@ knroSpecControl/main.cpp -text
 knroSpecControl/mainwindow.cpp -text
 knroSpecControl/mainwindow.h -text
 knroSpecControl/mainwindow.ui -text
+ujari/AUTHORS -text
+ujari/CMakeLists.txt -text
+ujari/CMakeLists.txt.user -text
+ujari/INSTALL -text
+ujari/README -text
+ujari/amccontroller.cpp -text
+ujari/amccontroller.h -text
+ujari/config.h.cmake -text
+ujari/encoder.cpp -text
+ujari/encoder.h -text
+ujari/forkmount.cpp -text
+ujari/forkmount.h -text
+ujari/indi_ujari.xml -text
+ujari/indi_ujari_sk.xml -text
+ujari/inverter.cpp -text
+ujari/inverter.h -text
+ujari/ujari.cpp -text
+ujari/ujari.h -text
+ujari/ujarierror.cpp -text
+ujari/ujarierror.h -text
