Restructured CMake for the examples directory and added tutorial_seven

--- a/.gitattributes
+++ b/.gitattributes
@@ -1202,20 +1202,30 @@ libindi/drivers/video/v4lphilips.cpp -text
 libindi/drivers/video/v4lphilips.h -text
 libindi/eventloop.c -text
 libindi/eventloop.h -text
+libindi/examples/CMakeLists.txt -text
 libindi/examples/README -text
+libindi/examples/tutorial_five/CMakeLists.txt -text
 libindi/examples/tutorial_five/dome.cpp -text
 libindi/examples/tutorial_five/dome.h -text
 libindi/examples/tutorial_five/raindetector.cpp -text
 libindi/examples/tutorial_five/raindetector.h -text
+libindi/examples/tutorial_four/CMakeLists.txt -text
 libindi/examples/tutorial_four/simpleskeleton.cpp -text
 libindi/examples/tutorial_four/simpleskeleton.h -text
 libindi/examples/tutorial_four/tutorial_four_sk.xml -text
+libindi/examples/tutorial_one/CMakeLists.txt -text
 libindi/examples/tutorial_one/simpledevice.cpp -text
 libindi/examples/tutorial_one/simpledevice.h -text
+libindi/examples/tutorial_seven/CMakeLists.txt -text
+libindi/examples/tutorial_seven/simple_telescope_simulator.cpp -text
+libindi/examples/tutorial_seven/simple_telescope_simulator.h -text
+libindi/examples/tutorial_six/CMakeLists.txt -text
 libindi/examples/tutorial_six/tutorial_client.cpp -text
 libindi/examples/tutorial_six/tutorial_client.h -text
+libindi/examples/tutorial_three/CMakeLists.txt -text
 libindi/examples/tutorial_three/simpleccd.cpp -text
 libindi/examples/tutorial_three/simpleccd.h -text
+libindi/examples/tutorial_two/CMakeLists.txt -text
 libindi/examples/tutorial_two/simplescope.cpp -text
 libindi/examples/tutorial_two/simplescope.h -text
 libindi/fq.c -text
